# Hand-TeX

./: .gitignore  Dockerfile  Hand-TeX.desktop  Makefile  README.md  build-pyinstaller.bat  requirements.txt  requirements_training.txt  setup.cfg
.github/workflows/: 1.yml
Windows scripts/: build-pyinstaller.bat
flatpak/: io.github.voxelcubes.hand-tex.appdata.xml
handtex/: __init__.py  about_driver.py  config.py  constants.py  data_recorder.py  driver_mainwindow.py  error_dialog_driver.py  gui_utils.py  issue_reporter_driver.py  license_driver.py  log_parser.py  log_viewer.py  main.py  sketchpad.py  state_saver.py  structures.py  symbol_list.py  symbol_relations.py  utils.py
handtex/CustomQ/: CComboBox.py  CRegexLineEdit.py  CScrollArea.py
handtex/data/: symbols.json  symbols.tar.xz
handtex/data/model/: encodings.txt
handtex/detector/: image_gen.py  inference.py  model.py
handtex/ui_generated_files/: ui_About.py  ui_ErrorDialog.py  ui_IssueReporter.py  ui_License.py  ui_Mainwindow.py  ui_SymbolList.py
icons/: build_icon_cache.py  copy_from_dark_to_light.py  theme_list.yaml
symbols/: pre_renderer.py  svg_deduper.py  symbol_list_parser.py  symbols.yaml
tests/: test_data_loading.py  test_log_parser.py  test_other_symmetry_sanity.py  test_symbol_metadata_sanity.py  test_theming.py
training/: data_loader.py  hyperparameters.py  image_gen.py  inference.py  model.py  optuna_search.py  shape_classifier.py  train.py
training/data_ingest/: check_new_drawings_ingest.py  check_symbol_presence.py  ingest_new_drawings.py  visualize_new_data.py
training/database/: symbols.yaml
training/misc_scripts/: analyzer.py  augmentation_tester.py  boxplot_symbol_frequency.py  database_operations.py  duplicate_command_checker.py  gather_commands_from_blob.py  inspector.py  make_new_db.py  pre_renderer.py  recalculate_frequencies.py  self_test_similarity.py  sortsimilarity.py  svg_deduper.py  symbol_list_parser.py  symbol_renderer.py  transformation_demo.py  visualize_new_data.py
training/symbol_metadata_scripts/: find_negations_by_name.py  find_symmetrical_by_name.py  manual_all_symmetries_review.py  manual_negation_checker.py  manual_other_symmetry_checker.py  manual_self_symmetry_checker.py  manul_other_similarity_checker.py  manul_self_similarity_checker.py  self_test_similarity.py  self_test_symmetires.py  sortinside.py  sortnegation.py  sortsimilarity.py  sortsymmetry.py
ui_files/: About.ui  ErrorDialog.ui  IssueReporter.ui  License.ui  Mainwindow.ui  SymbolList.ui
(+15 files in other folders)
