[metadata]
name = handtex
version = attr: handtex.__version__
description = attr: handtex.__description__
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/VoxelCubes/Hand-TeX
keywords = LaTeX, TeX, handwriting, detection, classification, symbol, OCR, GUI, desktop, Qt
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows

[options]
install_requires =
    attrs
    loguru
    PySide6
    xdg
    psutil
    numpy
    rdp
    torch
    torchvision
    natsort
    safetensors
    networkx
    noise
    pillow
python_requires = >=3.10
packages=find:

[options.package_data]
handtex=
    data/*
    data/symbols/**
    data/color_themes/**
    data/custom_icons/**
    data/theme_icons/**
    data/model/**
    data/symbol_metadata/**
    data/translation_generated_files/**

[options.exclude_package_data]
handtex=
    **/__pycache__/*

[options.packages.find]
exclude=
    tests*
    symbols*
    training*

[options.entry_points]
console_scripts =
    handtex = handtex.main:main
